# Qwen-QLoRA-Chef

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLICATION.md  README.md  Repository_Guide.md  Rubrics_publication.md  SETUP_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  true_requirements.txt
BERT_Scores/Base_Model_BERT_Results/: base_model_predictions_bert.jsonl  base_model_results_bert.json
BERT_Scores/Fine_Tune_BERT_Results/: eval_results_finetuned_bert.json  predictions_finetuned_bert.jsonl
Benchmark_Scores/: eval_benchmarks_base_model.json  eval_benchmarks_finetuned_model.json
Rouge_Scores/Base_Model_Rouge_Results/: Llama-3.2-1B-Instruct_eval_results.json  Llama-3.2-1B-Instruct_predictions.jsonl  eval_results_GPT-4o-mini.json  eval_results_gemma.json  eval_results_qwen.json  predictions_GPT-4o-mini.jsonl  predictions_gemma.jsonl  predictions_qwen.jsonl
Rouge_Scores/Fine_Tune_Rouge_Results/: eval_results_FineTuned.json  predictions_Fine_Tuned.jsonl
code/: Data_Preprocessing_pre_final (1).ipynb  config.yaml  evaluate_baseline_check.ipynb  evaluate_qlora.py  evaluate_qlora_BERT.py  evaluate_qlora_Rouge.py  evaluate_qlora_Rouge_ddp.py  evaluate_qlora_ddp.py  paths.py  train_qlora.py  train_qlora_ddp.py
code/evaluate_GPT-4o-mini/: evaluate_GPT-4o-mini.py
code/evaluate_benchmarks/: benchmark_eval.py  eval_config.yaml  run_eval_suite.py
code/openai_workflows/: evaluate_openai.py
code/utils/: config_utils.py  data_utils.py  inference_utils.py  model_utils.py
lora/checkpoint-200/: adapter_config.json  trainer_state.json
lora/checkpoint-300/: trainer_state.json
notebooks/: Data_Preprocessing.ipynb  Data_Preprocessing_final.ipynb  Evaluate_Baseline_Models_Rouge.ipynb  Model_Evaluation_Comparison.ipynb  evaluate_baseline_final.ipynb  evaluate_baseline_try.ipynb  master_config.yaml
notebooks/BERT_notebooks/: evaluate_baseline_model_BERT.ipynb  evaluate_finetuned_BERT.ipynb
